--- a/HTML/görsellerle.html
+++ b/HTML/görsellerle.html
@@ -18,7 +18,8 @@ target="_blank" yan sekmede açmaya yarar.
 <a href="https://kodluyoruz.org" target="_blank">
     kodluyoruz
 </a>
-
+<div>
 <a href="https://www.youtube.com/watch?v=Eiwy_fQjUzs" target="_blank">
     <img border="10" width="500" height="700" src="images/IMG_5377.JPG" alt="oyku cool">
 </a>
+</div>
