html ödev file update

--- a/HTML/ödev.html
+++ b/HTML/ödev.html
@@ -1,5 +1,7 @@
+<div style="background-color:#f0f8ff;padding-left:1000px; padding-right: 1000px;">
+ <div align="center">   
 <h1> <strong> <em>AHMET TİRELİOĞLU</em></strong></h1>
-
+</div>
 <!--
     dfghjklşi
     dfghjkl
@@ -9,13 +11,13 @@
     Merhaba , Ben ahmet tirelioğlu ,1996 Denizli doğumluyum. Tavas ilçesinde ikamet ediyorum.
     Yazılım sektörünü yakından takip ediyor ve gelecek hayatımda iyi bir yazılımcı olmak istiyorum.
 </p>
-<hr>
+<hr style="height:2px;border-width:5;background-color:white">
 <h3><u>Hobbylerim</u></h3>
 <p>
     futbol , yüzme , gezmek
 
 </p>
-<hr>
+<hr style="height:2px;border-width:5;background-color:white">
 <!--
     <div style="background-color:red;color:yellow;padding:20px;" yazının rengini ayarlıyor.
     <ul style="list-style-type:disc"> sırasız listelerde baştaki karakteri ayarlıyor.
@@ -49,7 +51,15 @@
         </ul>
     </ol>
 </div>
-<hr>
-
-<img width="350" height="450" border="20" src="images/IMG_0911.jpg" alt="AHMET">
-<p><b>ahmet tirelioğlu salda gölü gezisinden bir kare.</b></p>
+<br>
+<hr style="height:2px;border-width:5;background-color:white">
+<br>
+<div align="center">
+<a href="https://www.linkedin.com/in/ahmet-tirelio%C4%9Flu-b8a9ab231/" target="_blank">
+<img width="400" height="500" style="border-color:black;" border="7" src="images/IMG_0911.jpg" alt="AHMET">
+</a>
+</div>
+<div align="center">
+<p><b>Ahmet Tirelioğlu salda gölü gezisinden bir kare.</b></p>
+</div>
+</div>
